--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="stylesheets/medium-editor.min.css"> <!-- Core -->
+    <link rel="stylesheet" href="stylesheets/themes/default.css"> <!-- or any other theme -->
+    <link rel="stylesheet" href="stylesheets/font-awesome-4.7.0/css/font-awesome.min.css">
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <script src="javascripts/jQuery/jquery-3.2.0.min.js"></script>
+    <script src="javascripts/medium-editor.min.js"></script>
+
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <div class="editable">
+        <p>请开始你的表演</p>
+    </div>
+    <div>
+        <button id="submit" type="button">提交</button>
+    </div>
+
+    <script>
+        $(document).ready(function () {
+            var editor = new MediumEditor('.editable', {
+                buttonLabels: 'fontawesome'
+            });
+
+            $("#submit").click(function () {
+                alert(JSON.stringify(editor));
+            });
+        });
+    </script>
+
   </body>
 </html>
