--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="stylesheets/medium-editor.min.css"> <!-- Core -->
-    <link rel="stylesheet" href="stylesheets/themes/default.css"> <!-- or any other theme -->
-    <link rel="stylesheet" href="stylesheets/font-awesome-4.7.0/css/font-awesome.min.css">
+<head>
+    <link rel="stylesheet" href="stylesheets/Metro/metro.min.css">
+    <link rel="stylesheet" href="stylesheets/Metro/metro-icons.min.css">
     <title><%= title %></title>
 
     <script src="javascripts/jQuery/jquery-3.2.0.min.js"></script>
-    <script src="javascripts/medium-editor.min.js"></script>
-
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-
-    <div class="editable">
-        <p>请开始你的表演</p>
-    </div>
-    <div>
-        <button id="submit" type="button">提交</button>
-    </div>
-
+    <script src="javascripts/Metro/metro.min.js"></script>
     <script>
         $(document).ready(function () {
-            var editor = new MediumEditor('.editable', {
-                buttonLabels: 'fontawesome'
+            $("#btn_medium_editor").click(function () {
+               $.ajax({
+                   'url': '/medium_editor',
+                   'type': 'get',
+                   'datatype': 'html',
+                   'timeout': 10000,
+                   'error': function () {
+                       alert("请求失败！");
+                   }
+               })
             });
-
-            $("#submit").click(function () {
-                alert(JSON.stringify(editor));
-            });
-        });
+        })
     </script>
 
-  </body>
+</head>
+<body>
+<div class="container">
+    <div align="center">
+        <br>
+        <h1><%= title %></h1>
+        <h3>Welcome to <%= title %></h3>
+        <br>
+    </div>
+
+
+    <div class="grid">
+        <div class="row cells2" align="center">
+            <div class="cell">
+                <button class="image-button" id="btn_medium_editor">
+                    <span style="font-size: 18px">medium editor Demo</span>
+                    <span class="icon mif-file-text fg-white bg-black"></span>
+                </button>
+            </div>
+            <div class="cell">
+                <button class="image-button" id="btn_draft">
+                    <span style="font-size: 18px">draft Demo</span>
+                    <span class="icon mif-file-text fg-white bg-black"></span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+</body>
 </html>
