--- a/views/index_draft.ejs
+++ b/views/index_draft.ejs
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="stylesheets/medium-editor.min.css"> <!-- Core -->
-    <link rel="stylesheet" href="stylesheets/themes/default.css"> <!-- or any other theme -->
-    <link rel="stylesheet" href="stylesheets/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="stylesheets/medium_editor/medium-editor.min.css"> <!-- Core -->
+    <link rel="stylesheet" href="stylesheets/medium_editor/themes/default.css"> <!-- or any other theme -->
+    <link rel="stylesheet" href="stylesheets/medium_editor/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="stylesheets/Metro/metro.min.css">
+    <link rel="stylesheet" href="stylesheets/Metro/metro-icons.min.css">
     <title><%= title %></title>
 
     <script src="javascripts/jQuery/jquery-3.2.0.min.js"></script>
-    <script src="javascripts/medium-editor.min.js"></script>
+    <script src="javascripts/Metro/metro.min.js"></script>
+
+    <script src="javascripts/jQuery/jquery-3.2.0.min.js"></script>
+    <script src="javascripts/medium_editor/medium-editor.min.js"></script>
 
 </head>
 <body>
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
 
-<div class="editable">
-    <p>请开始你的表演</p>
-</div>
-<div>
-    <button id="submit" type="button">提交</button>
-</div>
+<div class="container">
+    <div align="center">
+        <br>
+        <h1>Welcome to <%= title %></h1>
+        <br>
+    </div>
 
+
+    <div class="grid">
+        <div class="cells2" align="center">
+            <div class="cell">
+                <div class="editable">
+                    请开始你的表演
+                </div>
+            </div>
+            <div class="cell">
+                <button class="image-button" id="btn_draft">
+                    <span style="font-size: 18px">提交</span>
+                    <span class="icon mif-expand-less fg-white bg-black"></span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
     $(document).ready(function () {
         var editor = new MediumEditor('.editable', {
@@ -32,6 +52,5 @@
         });
     });
 </script>
-
 </body>
 </html>
