--- a/views/index_draft.ejs
+++ b/views/index_draft.ejs
@@ -10,8 +10,6 @@
 
     <script src="javascripts/jQuery/jquery-3.2.0.min.js"></script>
     <script src="javascripts/Metro/metro.min.js"></script>
-
-    <script src="javascripts/jQuery/jquery-3.2.0.min.js"></script>
     <script src="javascripts/medium_editor/medium-editor.min.js"></script>
 
 </head>
@@ -24,7 +22,6 @@
         <br>
     </div>
 
-
     <div class="grid">
         <div class="cells2" align="center">
             <div class="cell">
@@ -33,7 +30,7 @@
                 </div>
             </div>
             <div class="cell">
-                <button class="image-button" id="btn_draft">
+                <button class="image-button" id="btn_submit">
                     <span style="font-size: 18px">提交</span>
                     <span class="icon mif-expand-less fg-white bg-black"></span>
                 </button>
@@ -41,14 +38,13 @@
         </div>
     </div>
 </div>
+
 <script>
     $(document).ready(function () {
-        var editor = new MediumEditor('.editable', {
-            buttonLabels: 'fontawesome'
-        });
+        var editor = new MediumEditor('.editable', {});
 
-        $("#submit").click(function () {
-            alert(JSON.stringify(editor));
+        $("#btn_submit").click(function () {
+            console.log(editor);
         });
     });
 </script>
