--- a/views/index_medium_editor.ejs
+++ b/views/index_medium_editor.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container animated fadeIn">
     <div align="center">
         <br>
         <h1>Welcome to <%= title %></h1>
@@ -26,12 +26,14 @@
         <div class="cells2">
             <div class="cell">
                 <div style="font-size: 24px">
-            <span class="myEditor">
-              <p>My father’s family name being Peter, and my Christian name Philip, my infant tongue could make of both names nothing longer or more explicit than Pip. So, I called myself Pip, and came to be called Pip.</p>
-            </span>
-
+                    <span class="myEditor" style="outline:medium;">
+                        My father’s family name being Peter, and my Christian name Philip,
+                        my infant tongue could make of both names nothing longer or more explicit than Pip.
+                        So, I called myself Pip, and came to be called Pip.
+                    </span>
                 </div>
             </div>
+            <br>
             <div class="cell" align="center">
                 <button class="image-button" id="btn_submit">
                     <span style="font-size: 18px">提交</span>
