--- a/views/index_medium_editor.ejs
+++ b/views/index_medium_editor.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="container animated fadeIn">
+<div class="container">
     <div align="center">
         <br>
         <h1>Welcome to <%= title %></h1>
