--- a/views/index_draft.ejs
+++ b/views/index_draft.ejs
@@ -2,12 +2,12 @@
 <html>
 <head>
 
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="stylesheets/Metro/metro.min.css">
     <link rel="stylesheet" href="stylesheets/Metro/metro-icons.min.css">
+    <link rel="stylesheet" href="stylesheets/Draft/Rich.css">
+    <link rel="stylesheet" href="stylesheets/Draft/Draft.css">
 
-    <script src="https://cdn.bootcss.com/react/15.4.2/react.min.js"></script>
-    <script src="https://cdn.bootcss.com/react/15.4.2/react-dom.min.js"></script>
-    <script src="https://cdn.bootcss.com/babel-standalone/6.22.1/babel.min.js"></script>
     <title><%= title %></title>
 
     <script src="javascripts/jQuery/jquery-3.2.0.min.js"></script>
